merge release into master patch