@@ -1,6 +1,32 @@
 
 package es.org.cxn.backapp.test.unit.controller;
 
+/*-
+ * #%L
+ * back-app
+ * %%
+ * Copyright (C) 2022 - 2025 Circulo Xadrez Naron
+ * %%
+ * Permission is hereby granted, free of charge, to any person obtaining a copy
+ * of this software and associated documentation files (the "Software"), to deal
+ * in the Software without restriction, including without limitation the rights
+ * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+ * copies of the Software, and to permit persons to whom the Software is
+ * furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in
+ * all copies or substantial portions of the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+ * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+ * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+ * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+ * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+ * THE SOFTWARE.
+ * #L%
+ */
+
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
 import static org.mockito.Mockito.doNothing;
@@ -22,9 +48,8 @@ import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.context.annotation.Import;
 import org.springframework.http.MediaType;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
@@ -33,19 +58,18 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import com.google.gson.GsonBuilder;
 
 import es.org.cxn.backapp.controller.entity.ChessQuestionsController;
-import es.org.cxn.backapp.exceptions.ChessQuestionServiceException;
 import es.org.cxn.backapp.model.ChessQuestionEntity;
 import es.org.cxn.backapp.model.form.requests.ChangeChessQuestionHasSeenRequest;
 import es.org.cxn.backapp.model.form.requests.CreateChessQuestionRequest;
 import es.org.cxn.backapp.model.form.responses.ChessQuestionResponse;
 import es.org.cxn.backapp.model.form.responses.ChessQuestionsListResponse;
 import es.org.cxn.backapp.model.persistence.PersistentChessQuestionEntity;
+import es.org.cxn.backapp.security.DefaultJwtUtils;
 import es.org.cxn.backapp.service.ChessQuestionsService;
-import es.org.cxn.backapp.service.DefaultJwtUtils;
+import es.org.cxn.backapp.service.exceptions.ChessQuestionServiceException;
 import es.org.cxn.backapp.test.utils.LocalDateTimeAdapter;
 
 @WebMvcTest(ChessQuestionsController.class)
-@Import(TestSecurityConfiguration.class)
 @AutoConfigureMockMvc(addFilters = false)
 class ChessQuestionsControllerTest {
 
@@ -67,7 +91,7 @@ class ChessQuestionsControllerTest {
      * service during testing, without invoking the actual service layer logic.
      * </p>
      */
-    @MockBean
+    @MockitoBean
     private ChessQuestionsService chessQuestionsService;
 
     /**
@@ -89,7 +113,7 @@ class ChessQuestionsControllerTest {
      * may be required for security-related operations in the controller.
      * </p>
      */
-    @MockBean
+    @MockitoBean
     private DefaultJwtUtils jwtUtils;
 
     @Test
@@ -236,7 +260,7 @@ class ChessQuestionsControllerTest {
 
         Assertions.assertEquals(2, chessQuestionsList.size(), "list should have 2 questions.");
 
-        var firstElement = chessQuestionsList.get(0);
+        var firstElement = chessQuestionsList.getFirst();
         var secondElement = chessQuestionsList.get(1);
 
         Assertions.assertEquals("Topic1", firstElement.topic(), "first element topic");
